# FilmSumaRAG

./: CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  Oppenheimer.2023.1080p.UHD.BluRay.DDP.5.1.HDR10.x265-c0kE.srt  Oppenheimer.2023.1080p.UHD.BluRay.DDP.5.1.HDR10.x265-c0kE_text.txt  PRD.md  README.md  Thor.2011.720p.BluRay.srt  Thor.2011.720p.BluRay_text.txt  backend.sh  docker-compose.yml  frontend.bat  frontend.sh  implementation_plan_local.md  notes.txt
backend_fastapi/: .env.example  Dockerfile  integration_test.py  pyproject.toml  requirements.txt  self_verify_deep.py  test_backend_full.py  test_deep_dive.py  test_integration.py  test_result_final.txt  test_result_final_v2.txt  test_result_final_v3.txt  vercel.json  verify_backend.py  verify_system.py
backend_fastapi/chroma_db/: chroma.sqlite3
backend_fastapi/data/: checkpoints.db  filmsuma.db
backend_fastapi/data/chroma_db/: chroma.sqlite3
backend_fastapi/data/embeddings/: Fast and the furious.pkl  The Fast and the Furious (2001).pkl
backend_fastapi/data/summaries/: Inception.txt  The Fast and the Furious (2001).txt  The Matrix.txt
backend_fastapi/scripts/: benchmark_rag.py
backend_fastapi/src/: main.py  worker.py
backend_fastapi/src/agents/: persona_agents.py  research_agent.py  summarizer.py  video_crawler.py
backend_fastapi/src/auth/: utils.py
backend_fastapi/src/core/: active_learning.py  celery_app.py  chroma_store.py  config.py  embeddings.py  llm_model.py  rag_chat.py  sub_to_summary.py  vector_db.py  vector_store_base.py
backend_fastapi/tests/: check_db_state.py  request.json  test_err_v3.txt  test_out.txt  test_user.json  test_ws.py  verify_system.py
(+102 files in other folders)
