[project]
name = "backend-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "chardet>=5.2.0",
    "chromadb>=1.4.1",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.6",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.1",
    "numpy>=2.2.6",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pysubs2>=1.8.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.45",
    "subliminal>=2.5.0",
    "torch>=2.9.1",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]
