[project]
name = "backend-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chardet>=5.2.0",
    "fastapi>=0.128.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.6",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.1",
    "nltk>=3.9.2",
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "pysubs2>=1.8.0",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.2.0",
    "subliminal>=2.5.0",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]
